--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v1
     # Deploy to the server
     - name: Deploy to production
       uses: easingthemes/ssh-deploy@v2.1.5
