Add PECE (Uni Hamburg)

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -80,3 +80,10 @@
       Zettlr, I hope that this will also be adequately addressed and prove helpful for others.
   author: Justin Clark
   author_link: https://www.justinclark.xyz/
+# =============================================================================
+- link: https://www.pece.uni-hamburg.de/?q=node/710
+  title: Digitales Propädeutikum (Digital Propaedeutics, German)
+  description: |
+    A "living document" containing a lot of useful links for digital workflows, divided into four
+      modules. German only.
+  author: Gertraud Koch, Roman Knipping-Sorokin, Natalie Isaak, and others (University of Hamburg)
